--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1,16 +1,14 @@
-%\documentclass[english,12pt]{article}
-\documentclass[doublespacing]{bmcart_dla}
+\documentclass[english,12pt]{article}
 \usepackage{fontspec}
-\setmainfont{FreeSans}
+\setmainfont{FreeSerif}
 \setsansfont{FreeSans}
 \setmonofont{FreeMono}
-\setmathrm{FreeSans}
+\setmathrm{FreeSerif}
 \setmathsf{FreeSans}
 \setmathtt{FreeSans}
-%\usepackage[letterpaper,left=1in,right=1in,top=1in,bottom=1in,headheight=14pt]{geometry}
-\usepackage[letterpaper]{geometry}
+\usepackage[letterpaper,left=0.75in,right=0.75in,top=0.75in,bottom=0.75in,headheight=14pt]{geometry}
 \usepackage{url}
-% \usepackage{fancyhdr}
+\usepackage{fancyhdr}
 \usepackage{graphicx}
 % \usepackage[bf]{caption}
 \usepackage{rotating}
@@ -30,9 +28,10 @@
 \usepackage{pdflscape}
 \usepackage{amsmath}
 \usepackage{sansmath}
-\usepackage[backend=biber,natbib=true,hyperref=true,citestyle=numeric-comp,style=nature,autocite=inline]{biblatex}
+\usepackage[backend=biber,natbib=true,hyperref=true,citestyle=authoryear-comp,firstinits=true,sorting=nyt,bibstyle=authoryear,autocite=inline,maxcitenames=1,mincitenames=1,maxbibnames=10,minbibnames=10]{biblatex}
+\DefineBibliographyStrings{english}{andothers = {\emph{et\addabbrvspace al\adddot}}}
 \addbibresource{references.bib}
-% \usepackage[noblocks,auth-sc]{authblk}
+\usepackage[noblocks,auth-sc]{authblk}
 \usepackage[hyperfigures,bookmarks,colorlinks,linkcolor=black,urlcolor=black,citecolor=blue]{hyperref}
 %\usepackage[hyperfigures,bookmarks,colorlinks,citecolor=black,filecolor=black,linkcolor=black,urlcolor=black]{hyperref}
 % Floats at end for journals
@@ -55,53 +54,19 @@
 \zxrsetup{toltxlabel}
 \zexternaldocument*{supplemental_material}
 \usepackage[capitalize]{cleveref}
-% \newenvironment{narrow}[2]{%
-%   \begin{list}{}{%
-%       \setlength{\topsep}{0pt}%
-%       \setlength{\leftmargin}{#1}%
-%       \setlength{\rightmargin}{#2}%
-%       \setlength{\listparindent}{\parindent}%
-%       \setlength{\itemindent}{\parindent}%
-%       \setlength{\parsep}{\parskip}}%
-%   \item[]}{\end{list}}
-% \def\newblock{\hskip}
-% \newenvironment{paperquote}{%
-%   \begin{quote}%
-%      \it
-%   }%
-%   {\end{quote}}
-% \renewcommand{\textfraction}{0.15}
-% \renewcommand{\topfraction}{0.85}
-% \renewcommand{\bottomfraction}{0.65}
-% \renewcommand{\floatpagefraction}{0.60}
-%\renewcommand{\baselinestretch}{1.8}
-% \newenvironment{enumerate*}%
-%   {\begin{enumerate}%
-%     \setlength{\itemsep}{0pt}%
-%     \setlength{\parskip}{0pt}}%
-%   {\end{enumerate}}
-% \newenvironment{itemize*}%
-%   {\begin{itemize}%
-%     \setlength{\itemsep}{0pt}%
-%     \setlength{\parskip}{0pt}}%
-%   {\end{itemize}}
-% \setcounter{tocdepth}{3}
-% \oddsidemargin 0.0in 
-% \textwidth 6in
-% \raggedbottom
-% \clubpenalty = 10000
-% \widowpenalty = 10000
+\raggedbottom
+\clubpenalty = 10000
+\widowpenalty = 10000
 % set a large emergency stretch to avoid issues with overfull boxes
 % \setlength{\emergencystretch}{20em}
 % make the afill smaller
-% \renewcommand\Affilfont{\itshape\small}
+\renewcommand\Affilfont{\itshape\small}
 \renewcommand\cite[1]{\autocite{#1}}
 % \pagestyle{fancy}
 
 \input{common_latex}
 
 \begin{document}
-\raggedright
 
 
 <<load.libraries,echo=FALSE,results="hide",warning=FALSE,message=FALSE,error=FALSE,cache=FALSE>>=
@@ -181,55 +146,56 @@ grad.def <- list(low = "#132B43", high = "#56B1F7", space = "Lab", na.value = NA
 % Acronyms
 \input{acronyms}
 
-\begin{frontmatter}
-\begin{fmbox}
-\dochead{Research}%
 \title{The evolution of gene expression in the term placenta of viviparous mammals}%
 %
-\author[addressref={aff1},noteref={n1},email={don@donarmstrong.com}]{\inits{DL}\fnm{Don L} \snm{Armstrong}}
-\author[addressref={aff2},noteref={n1},email={1mmcgowen1@gmail.com}]{\inits{MR}\fnm{Michael R.} \snm{McGowen}}
-\author[addressref={aff1},email={aweckle@illinois.edu}]{\inits{AL}\fnm{Amy} \snm{Weckle}}
-\author[addressref={aff3},email={jacaravas@gmail.com}]{\inits{J}\fnm{Jason} \snm{Caravas}}
-\author[addressref={aff4},email={agnewd@dcpah.msu.edu}]{\inits{D}\fnm{Dalen} \snm{Agnew}}
-\author[addressref={aff5},email={kbenirschke@ucsd.edu}]{\inits{K}\fnm{Kurt} \snm{Benirschke}}
-\author[addressref={aff6},email={suerumbaugh@gmail.com}]{\inits{S}\fnm{Sue} \snm{Savage-Rumbaugh}}
-\author[addressref={aff11},email={nevo@research.haifa.ac.il}]{\inits{E}\fnm{Eviatar} \snm{Nevo}}
-\author[addressref={aff7,aff8},email={cjkim@med.wayne.edu}]{\inits{CJ}\fnm{Chong J} \snm{Kim}}
-\author[addressref={aff9},email={gunter.wagner@yale.edu}]{\inits{GP}\fnm{Günter P.} \snm{Wagner}}
-\author[addressref={aff7},email={prbchiefstaff@med.wayne.edu}]{\inits{R}\fnm{Roberto} \snm{Romero}}
-\author[addressref={aff1,aff6,aff10},corref={aff1},email={wildmand@illinois.edu}]{\inits{DE}\fnm{Derek E.} \snm{Wildman}}
-\address[id=aff1]{Institute for Genomic Biology, University of Illinois at Urbana-Champaign, Urbana, IL, USA}
-\address[id=aff2]{School of Biological and Chemical Sciences, Queen Mary, University of London, London, UK}
-\address[id=aff3]{Center for Molecular Medicine and Genetics, Wayne State University School of Medicine, Detroit, MI, USA}
-\address[id=aff4]{Diagnostic Center for Population and Animal Health, College of Veterinary Medicine, Michigan State University, East Lansing, MI, USA}
-\address[id=aff5]{Department of Pathology, University of California San Diego, La Jolla, CA, USA}
-\address[id=aff6]{Great Ape Trust/Bonobo Hope Sanctuary, Des Moines, IA, USA}
-\address[id=aff7]{Perinatology Research Branch, Eunice Kennedy Shriver National Institute of Child Health and Human Development (NICHD), National Institutes of Health (NIH), Detroit, MI, USA}
-\address[id=aff8]{Department of Pathology, Wayne State University School of Medicine, Detroit, MI, USA}
-\address[id=aff9]{Department of Ecology and Evolutionary Biology and Yale Systems Biology Institute, Yale University, New Haven, CT, USA}
-\address[id=aff10]{Department of Molecular and Integrative Physiology, University of Illinois at Urbana-Champaign, Urbana, IL, USA}
-\address[id=aff11]{The Institute of Evolution, University of Haifa, Haifa, Israel}
+%\author[addressref={aff1},noteref={n1},email={don@donarmstrong.com}]{\inits{DL}\fnm{Don L} \snm{Armstrong}}
+\author[1,†]{Don L. Armstrong}
+%\author[addressref={aff2},noteref={n1},email={1mmcgowen1@gmail.com}]{\inits{MR}\fnm{Michael R.} \snm{McGowen}}
+\author[2,†]{Michael R. McGowen}
+%\author[addressref={aff1},email={aweckle@illinois.edu}]{\inits{AL}\fnm{Amy} \snm{Weckle}}
+\author[1]{Amy Weckle}
+%\author[addressref={aff3},email={jacaravas@gmail.com}]{\inits{J}\fnm{Jason} \snm{Caravas}}
+\author[3]{Jason Caravas}
+%\author[addressref={aff4},email={agnewd@dcpah.msu.edu}]{\inits{D}\fnm{Dalen} \snm{Agnew}}
+\author[4]{Dalen Agnew}
+%\author[addressref={aff5},email={kbenirschke@ucsd.edu}]{\inits{K}\fnm{Kurt} \snm{Benirschke}}
+\author[5]{Kurt Benirschke}
+%\author[addressref={aff6},email={suerumbaugh@gmail.com}]{\inits{S}\fnm{Sue} \snm{Savage-Rumbaugh}}
+\author[6]{Sue Savage-Rumbaugh}
+%\author[addressref={aff11},email={nevo@research.haifa.ac.il}]{\inits{E}\fnm{Eviatar} \snm{Nevo}}
+\author[7]{Eviatar Nevo}
+%\author[addressref={aff7,aff8},email={cjkim@med.wayne.edu}]{\inits{CJ}\fnm{Chong J} \snm{Kim}}
+\author[8,9]{Chong J. Kim}
+%\author[addressref={aff9},email={gunter.wagner@yale.edu}]{\inits{GP}\fnm{Günter P.} \snm{Wagner}}
+\author[10]{Gunter Wagner}
+% \author[addressref={aff7},email={prbchiefstaff@med.wayne.edu}]{\inits{R}\fnm{Roberto} \snm{Romero}}
+\author[8]{Roberto Romero}
+%\author[addressref={aff1,aff6,aff10},corref={aff1},email={wildmand@illinois.edu}]{\inits{DE}\fnm{Derek E.} \snm{Wildman}}
+\author[1,11,*]{Derek E. Wildman}
+\affil[1]{Institute for Genomic Biology, University of Illinois at Urbana-Champaign, Urbana, IL, USA}
+\affil[2]{School of Biological and Chemical Sciences, Queen Mary, University of London, London, UK}
+\affil[3]{Center for Molecular Medicine and Genetics, Wayne State University School of Medicine, Detroit, MI, USA}
+\affil[4]{Diagnostic Center for Population and Animal Health, College of Veterinary Medicine, Michigan State University, East Lansing, MI, USA}
+\affil[5]{Department of Pathology, University of California San Diego, La Jolla, CA, USA}
+\affil[6]{Great Ape Trust/Bonobo Hope Sanctuary, Des Moines, IA, USA}
+\affil[7]{The Institute of Evolution, University of Haifa, Haifa, Israel}
+\affil[8]{Perinatology Research Branch, Eunice Kennedy Shriver National Institute of Child Health and Human Development (NICHD), National Institutes of Health (NIH), Detroit, MI, USA}
+\affil[9]{Department of Pathology, Wayne State University School of Medicine, Detroit, MI, USA}
+\affil[10]{Department of Ecology and Evolutionary Biology and Yale Systems Biology Institute, Yale University, New Haven, CT, USA}
+\affil[11]{Department of Molecular and Integrative Physiology, University of Illinois at Urbana-Champaign, Urbana, IL, USA}
+\affil[†]{Equal contributors}
+\affil[*]{To whom correspondence should be addressed: wildman@illinois.edu}
 
-\begin{artnotes}
-\end{artnotes}
+\maketitle
 
-\begin{artnotes}
-\note[id=n1]{Equal contributor} % note, connected to author
-\end{artnotes}
-
-\end{fmbox}
-% \twocolumn
-
-\begin{abstractbox}
-\begin{abstract}
-% \section{Abstract}
-  \parttitle{Background} The placenta is arguably the most
+ \section{Abstract}
+  The placenta is arguably the most
   anatomically variable organ in mammals. Understanding gene
   expression patterns among placentas from multiple species
   illuminates the molecular basis of placenta function as well
   obstetrical syndromes affecting humans.
 
-  \parttitle{Results} We measured the expression profiles of
+  We measured the expression profiles of
   \Sexpr{star.logs[,length(unique(file))]} term placentas of
   \Sexpr{star.logs[,length(unique(species))]} species of mammals. We
   found lineage-specific differential expression of prolactin,
@@ -241,7 +207,7 @@ grad.def <- list(low = "#132B43", high = "#56B1F7", space = "Lab", na.value = NA
   \textit{S100A10}) and cell-cell interactions (\textit{LAMC1},
   \textit{LUM}, and \textit{LGALS1}).
 
-  \parttitle{Conclusions} A diverse array of genes are differentially
+  A diverse array of genes are differentially
   expressed and are likely to play a role in the anatomical
   variability of the placenta in the placentas of mammalian lineages.
   Furthermore, multiple genes which are associated with pre-eclampsia
@@ -254,10 +220,6 @@ grad.def <- list(low = "#132B43", high = "#56B1F7", space = "Lab", na.value = NA
   species analyzed.
 
 \textbf{Keywords:} mammal, gene expression, evolution, RNA-seq, placenta
-
-\end{abstract}
-\end{abstractbox}
-\end{frontmatter}
 
 \section{Background}
 
@@ -813,7 +775,7 @@ placenta.lineage.specific.table <- function(analysis,output=TRUE,lineage.table=p
 output.top.genes.table <- function(data,output=TRUE) {
     if (output) {
         table.display <- c("s","s","s","d")
-        table.align <- c("c","c","p{3in}","r")
+        table.align <- c("c","c","p{4in}","r")
         if (any(colnames(data) %in% "SEM"))  {
             table.display <- c(table.display,"d")
             table.align <- c(table.align,"r")
@@ -872,7 +834,7 @@ lineage by t-test.
 \label{sec:human_placenta}
 
 \begin{table}
-  \footnotesize
+  \small
 <<top.50.human.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="homo sapiens"))
 @ 
@@ -1077,7 +1039,7 @@ grid.text(c("A","B","C","D"),
 \subsubsection{\bonobo Placenta Transcriptome}
 
 \begin{table}
-  \footnotesize
+  \small
 <<top.50.bonobo.expressed.genes,echo=FALSE,results="asis">>=
 top.bonobo.genes <- top.genes.table(species.name="pan paniscus")
 output.top.genes.table(top.bonobo.genes)
@@ -1141,7 +1103,7 @@ the hormone adrenomedullin (\textit{ADM}).
 \subsubsection{\smonkey Transcriptome}
 
 \begin{table}
-  \footnotesize
+  \small
 <<top.50.spider.monkey.expressed.genes,echo=FALSE,results="asis">>=
 top.spider.monkey.genes <- top.genes.table(species.name="ateles fusciceps")
 output.top.genes.table(top.spider.monkey.genes)
@@ -1193,7 +1155,7 @@ specific shifts.
 \subsubsection{\mouse Placenta Transcriptome}
 
 \begin{table}[h]
-  \footnotesize
+  \small
 <<top.50.mouse.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="mus musculus"))
 @ 
@@ -1298,7 +1260,7 @@ for the exchange of metabolites in the placenta labyrinth
 \subsubsection{\galili Placenta Transcriptome}
 
 \begin{table}[h]
-  \footnotesize
+  \small
 <<top.50.n.galili.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="spalax galili"))
 @ 
@@ -1333,7 +1295,7 @@ transmembrane protein of currently unknown function,
 \subsubsection{\carmeli Placenta Transcriptome}
 
 \begin{table}[h]
-  \footnotesize
+  \small
 <<top.50.s.carmeli.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="spalax carmeli"))
 @ 
@@ -1377,7 +1339,7 @@ laurasiatherians and Euarchontoglires
 \subsubsection{\dog Placenta Transcriptome}
 
 \begin{table}
-  \footnotesize
+  \small
 <<top.50.dog.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="canis familiaris"))
 @ 
@@ -1425,7 +1387,7 @@ and expression of \textit{HSD3B7} is also low
 \subsubsection{\cow Placenta Transcriptome}
 
 \begin{table}
-  \footnotesize
+  \small
 <<top.50.cow.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="bos taurus"))
 @ 
@@ -1502,7 +1464,7 @@ comparatively greater expression of \textit{HSD3B} %
 \subsubsection{\pig Placenta Transcriptome}
 
 \begin{table}[h]
-  \footnotesize
+  \small
 <<top.50.pig.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="sus scrofa"))
 @ 
@@ -1547,7 +1509,7 @@ and multiple cytoskeleton and extracellular matrix proteins
 \subsubsection{\horse Placenta Transcriptome}
 
 \begin{table}[h]
-  \footnotesize
+  \small
 <<top.50.horse.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="equus caballus"))
 @ 
@@ -1580,7 +1542,7 @@ similar to the pattern of expression seen in \pig and \dog.
 \subsubsection{\sheep Placenta Transcriptome}
 
 \begin{table}[h]
-  \footnotesize
+  \small
 <<top.50.sheep.expressed.genes,echo=FALSE,results="asis">>=
 top.sheep.genes <- top.genes.table(species.name="ovis aries",n=200)
 top.sheep.genes <-
@@ -1744,7 +1706,7 @@ complex are also highly expressed, including
 \subsubsection{\opossum Placenta Transcriptome}
 
 \begin{table}
-  \footnotesize
+  \small
 <<top.50.opossum.expressed.genes,echo=FALSE,results="asis">>=
 output.top.genes.table(top.genes.table(species.name="monodelphis domestica"))
 @ 
